--- a/plumstylesheet.css
+++ b/plumstylesheet.css
@@ -146,6 +146,7 @@ body {
     color: #929395;
 }
 
+
 #demos #faqpink {
     display: block; 
     margin: auto;
@@ -154,6 +155,10 @@ body {
     font-family: 'contax_pro_45_ligregular', sans-serif;
     font-size: 25px;
     color: #be69a1;
+}
+
+area {
+    outline: none;
 }
 
 /**************/
@@ -309,6 +314,7 @@ input[type=checkbox]:checked ~ #menu{
     width: 90%;
     /* margin-left: 30px; */
 }
+
 
 .ajaxsupport {
     display: block;
@@ -702,10 +708,37 @@ input[type=checkbox]:checked ~ #menu{
     color: #a4ddca; 
 }
 
+#cat {
+    display: block;
+    margin: auto;
+    padding-top: 2em;
+}
+
+#catcaption {
+    display:block;
+    margin: auto;
+    text-align: center;
+        
+}
+
+map:focus {outline:0;}
 
 
+#contactbody {
+    
+}
 
+#contactbody img {
+    display: block;
+    width: 80%;
+    margin: auto;
+    padding-top: 3em;
+}
 
+map {
+    /* display: inline; */
+    padding-right: 140px;
+}
 
 
 
